<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:orientation="vertical" >
 
    <ScrollView
       android:id="@+id/scroll"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content" >
 
        <TableLayout
           android:id="@+id/tl1"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content" >
 
            <TableRow
               android:id="@+id/tr1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" >
               
                <TextView
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:layout_weight="1"
                   android:text="@string/id" >
                </TextView>
 
                <TextView
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:layout_weight="10"
                   android:text="@string/nome" >
                </TextView>
 
                <TextView
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:layout_weight="10"
                   android:text="@string/matricula" >
                </TextView>
                
                <TextView 
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="10"
                    android:text="@string/disciplina" >
                </TextView>    
                 
                <TextView 
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="5"
                    android:text="@string/cargaHoraria" >
                </TextView>    
                    
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>